--- a/docs/lib/sage-frontend/stylesheets/docs/_docs_container.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_docs_container.scss
@@ -5,8 +5,8 @@
 ================================================== */
 
 .docs-container {
-  margin-top: sage-spacing();
-  margin-bottom: sage-spacing();
+  margin-block-start: sage-spacing();
+  margin-block-end: sage-spacing();
 
   @include sage-panel;
 }
