--- a/docs/lib/sage-frontend/stylesheets/docs/_table.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_table.scss
@@ -6,7 +6,7 @@
 
 .sage-table {
   .example__preview & {
-    margin-bottom: sage-spacing();
+    margin-block-end: sage-spacing();
   }
 
   table {
