--- a/docs/lib/sage-frontend/stylesheets/docs/_text.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_text.scss
@@ -14,7 +14,7 @@ code {
 pre {
   .sage-type & {
     padding: rem(8px);
-    margin-bottom: rem(8px);
+    margin-block-end: rem(8px);
     font-size: 0.9rem;
   }
 }
