--- a/packages/sage-assets/lib/stylesheets/components/_carousel.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_carousel.scss
@@ -54,5 +54,5 @@ $-sage-carousel-inactive-color: sage-color(grey, 500);
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: sage-spacing(sm);
+  margin-block-start: sage-spacing(sm);
 }
