--- a/packages/sage-assets/lib/stylesheets/components/_form_select.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_select.scss
@@ -48,7 +48,7 @@ $-select-arrow-position-inverse-with-message: calc(100% - #{$-select-height + $-
   @include sage-form-field-label;
 
   grid-area: label;
-  margin-bottom: $-select-margin-label;
+  margin-block-end: $-select-margin-label;
 }
 
 .sage-select__arrow {
