--- a/packages/sage-assets/lib/stylesheets/components/_form_textarea.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_textarea.scss
@@ -37,7 +37,7 @@ $-textarea-color-default: sage-color(grey, 800);
   @include sage-form-field-label;
 
   grid-area: label;
-  margin-bottom: $-textarea-label-margin;
+  margin-block-end: $-textarea-label-margin;
 }
 
 .sage-textarea__field {
