--- a/packages/sage-assets/lib/stylesheets/components/_hero.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_hero.scss
@@ -140,7 +140,7 @@ $-hero-play-icon-background-color: sage-color(white);
 
 .sage-hero__artwork-image {
   position: absolute;
-  top: 50%;
+  inset-block-start: 50%;
   transform: translateY(-50%);
   width: 100%;
 
@@ -163,8 +163,8 @@ $-hero-play-icon-background-color: sage-color(white);
     &::before {
       @include sage-icon-base(play, md, pine);
       position: absolute;
-      top: 50%;
-      left: 50%;
+      inset-block-start: 50%;
+      inset-inline-start: 50%;
       transform: translate(-50%, -50%);
       z-index: sage-z-index(default, 1);
       align-items: center;
@@ -176,8 +176,8 @@ $-hero-play-icon-background-color: sage-color(white);
     &::after {
       content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' class='pdsicon'%3E%3Cpath d='M14.37 7.445 4.37.78a.667.667 0 0 0-1.037.554v13.334a.667.667 0 0 0 1.037.554l10-6.666a.667.667 0 0 0 0-1.11Z'%3E%3C/path%3E%3C/svg%3E");
       position: absolute;
-      top: 50%;
-      left: 50%;
+      inset-block-start: 50%;
+      inset-inline-start: 50%;
       transform: translate(-50%, -50%);
       width: $-hero-artwork-size;
       height: $-hero-artwork-size;
