--- a/packages/sage-assets/lib/stylesheets/components/_loader.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_loader.scss
@@ -30,10 +30,10 @@ $-loader-lower-opacity: 0.4;
 
   .sage-btn--is-loading & {
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset-block-start: 0;
+    inset-inline-end: 0;
+    inset-block-end: 0;
+    inset-inline-start: 0;
     margin: auto;
   }
 
@@ -47,8 +47,8 @@ $-loader-lower-opacity: 0.4;
 .sage-loader--bar {
   overflow: hidden;
   position: relative;
-  top: 50%;
-  left: 50%;
+  inset-block-start: 50%;
+  inset-inline-start: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: $-loader-bar-width;
@@ -61,8 +61,8 @@ $-loader-lower-opacity: 0.4;
     content: "";
     z-index: sage-z-index(default, 2);
     position: absolute;
-    top: 0;
-    left: 0;
+    inset-block-start: 0;
+    inset-inline-start: 0;
     width: 0;
     height: $-loader-bar-height;
     border-radius: sage-border(radius);
@@ -89,7 +89,7 @@ $-loader-lower-opacity: 0.4;
 .sage-loader__spinner--loading-button {
   width: sage-spacing(sm);
   height: sage-spacing(sm);
-  margin-right: sage-spacing(xs);
+  margin-inline-end: sage-spacing(xs);
 }
 
 .sage-loader__spinner-path {
@@ -133,7 +133,7 @@ $-loader-lower-opacity: 0.4;
 }
 
 .sage-loader__text {
-  margin-top: sage-spacing(sm);
+  margin-block-start: sage-spacing(sm);
 }
 
 @keyframes loader-bar {
@@ -141,15 +141,15 @@ $-loader-lower-opacity: 0.4;
     width: 0;
   }
   25% {
-    left: 15%;
+    inset-inline-start: 15%;
     width: 30%;
   }
   50% {
-    left: 40%;
+    inset-inline-start: 40%;
     width: 70%;
   }
   100% {
-    left: 100%;
+    inset-inline-start: 100%;
     width: 15%;
   }
 }
