--- a/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_progress_bar.scss
@@ -20,7 +20,7 @@ $-progress-bar-height: sage-spacing(xs);
 
   .sage-modal__header & {
     position: absolute;
-    bottom: 0;
+    inset-block-end: 0;
     width: 100%;
   }
 }
@@ -65,6 +65,6 @@ $-progress-bar-height: sage-spacing(xs);
 .sage-progress-bar__percent {
   @extend %t-sage-body-small-semi;
 
-  margin-left: rem(12px);
+  margin-inline-start: rem(12px);
 }
 
