--- a/packages/sage-assets/lib/stylesheets/components/_sidebar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_sidebar.scss
@@ -15,8 +15,8 @@ $-sidebar-top-offset: $sage-assistant-height;
   flex-direction: column;
   z-index: sage-z-index(nav);
   position: fixed;
-  top: $-sidebar-top-offset;
-  left: 0;
+  inset-block-start: $-sidebar-top-offset;
+  inset-inline-start: 0;
   transform: translateX(-100%);
   height: calc(100% - #{$-sidebar-top-offset});
   width: sage-sidebar(xl);
@@ -61,9 +61,9 @@ $-sidebar-top-offset: $sage-assistant-height;
   content: "";
   display: block;
   position: absolute;
-  top: calc(-1 * #{sage-spacing(sm)});
-  left: 0;
-  right: 0;
+  inset-block-start: calc(-1 * #{sage-spacing(sm)});
+  inset-inline-start: 0;
+  inset-inline-end: 0;
   height: sage-spacing(sm);
   background: linear-gradient(to top, #{$-sidebar-color-background} 0%, rgba(255, 255, 255, 0) 60%);
 }
