--- a/docs/app/views/layouts/lockup/application.html.erb
+++ b/docs/app/views/layouts/lockup/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
   <head>
     <%= render "application/meta" %>
     <%= render "application/styles" %>
