--- a/docs/app/views/lockup/lockup/unlock.erb
+++ b/docs/app/views/lockup/lockup/unlock.erb
@@ -1,4 +1,4 @@
-<%= sage_component SageContainer, { size: "md", html_attributes: { style: "padding-top: 200px;"}} do %>
+<%= sage_component SageContainer, { size: "md", html_attributes: { style: "padding-block-start: 200px;"}} do %>
   <%= image_tag("media/images/sage.svg", width: 100) %>
   <h1 class="t-sage-heading-1">Sage Design System</h1>
   <h2 class="t-sage-heading-6">SCSS Based Component Library for our applications UI</h2>
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <%= form_for :lockup, url: { action: 'unlock' }, html: {style: "padding-top: 50px"} do |form| %>
+  <%= form_for :lockup, url: { action: 'unlock' }, html: {style: "padding-block-start: 50px"} do |form| %>
     <% if params[:return_to].present? %>
       <%= form.hidden_field "return_to", value: params[:return_to] %>
     <% elsif @return_to.present? %>
