--- a/docs/lib/sage-frontend/stylesheets/docs/_grid.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_grid.scss
@@ -6,7 +6,7 @@
 
 .grid-item {
   width: 100%;
-  margin-bottom: sage-spacing(md);
+  margin-block-end: sage-spacing(md);
   padding: sage-spacing(xs) sage-spacing(md);
   text-align: center;
   background: sage-color(grey, 200);
