--- a/docs/lib/sage-frontend/stylesheets/docs/_home.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_home.scss
@@ -14,7 +14,7 @@
   background-color: sage-color(primary, 500);
 
   @media (max-width: sage-breakpoint(md-min)) {
-    padding-bottom: sage-spacing(xl);
+    padding-block-end: sage-spacing(xl);
   }
 
   .sage-btn--subtle.sage-btn--secondary {
@@ -32,8 +32,8 @@
 
 .docs-hero__background {
   position: absolute;
-  left: 0;
-  top: 0;
+  inset-inline-start: 0;
+  inset-block-start: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -44,8 +44,8 @@
 }
 
 .docs-hero__title {
-  margin-bottom: sage-spacing(sm);
-  margin-top: sage-spacing();
+  margin-block-end: sage-spacing(sm);
+  margin-block-start: sage-spacing();
   font-size: 4rem;
   line-height: 1;
   color: inherit;
@@ -64,20 +64,20 @@
 }
 
 .docs-section__title {
-  margin-bottom: sage-spacing(2xl);
+  margin-block-end: sage-spacing(2xl);
 
   @media (max-width: sage-breakpoint(md-min)) {
-    margin-bottom: sage-spacing();
+    margin-block-end: sage-spacing();
   }
 }
 
 .docs-section__icon {
-  margin-bottom: sage-spacing();
+  margin-block-end: sage-spacing();
 }
 
 .docs-section__platform-icon {
   width: rem(48px);
-  margin-bottom: sage-spacing();
+  margin-block-end: sage-spacing();
 }
 
 .docs-iframe {
@@ -90,8 +90,8 @@
     content: "";
     position: absolute;
     z-index: sage-z-index(default, 1);
-    top: 0;
-    left: 0;
+    inset-block-start: 0;
+    inset-inline-start: 0;
     height: 100%;
     width: 100%;
     backdrop-filter: blur(70px);
