--- a/docs/lib/sage-frontend/stylesheets/docs/_status_table.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_status_table.scss
@@ -20,21 +20,21 @@ $-status-table-heading-padding: sage-spacing(xs) sage-spacing(sm);
 
   tbody {
     tr {
-      border-bottom: 0;
+      border-block-end: 0;
     }
 
     tr:last-child {
-      border-bottom: 0;
+      border-block-end: 0;
     }
   }
 
   th {
     padding: $-status-table-heading-padding;
     text-align: center;
-    border-bottom: $-status-table-border;
+    border-block-end: $-status-table-border;
 
     &:first-child {
-      padding-left: 0;
+      padding-inline-start: 0;
       text-align: left;
       text-align: inline-start;
     }
@@ -44,7 +44,7 @@ $-status-table-heading-padding: sage-spacing(xs) sage-spacing(sm);
     padding: $-status-table-cell-padding;
     vertical-align: middle;
     text-align: center;
-    border-bottom: sage-border();
+    border-block-end: sage-border();
 
     &:first-child {
       font-weight: sage-font-weight(semibold);
