--- a/packages/sage-assets/lib/stylesheets/components/_badge.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_badge.scss
@@ -55,7 +55,7 @@ $-badge-statuses: (
   }
 
   .sage-dot ~ & {
-    padding-left: sage-spacing(2xs);
+    padding-inline-start: sage-spacing(2xs);
   }
 
   .sage-badge--large & {
@@ -105,7 +105,7 @@ $-badge-statuses: (
       @include sage-focus-outline--update-color(sage-color(purple, 300));
 
       position: static;
-      padding-right: rem(24px);
+      padding-inline-end: rem(24px);
 
       &::after {
         border-radius: $-badge-border-radius;
@@ -113,11 +113,11 @@ $-badge-statuses: (
     }
 
     &.sage-badge--large .sage-badge__value {
-      padding-right: rem(30px);
+      padding-inline-end: rem(30px);
     }
 
     &.sage-badge--large .sage-badge__decor-icon {
-      right: rem(10px);
+      inset-inline-end: rem(10px);
     }
 
     .sage-badge__decor-icon {
@@ -125,8 +125,8 @@ $-badge-statuses: (
       justify-content: center;
       align-items: center;
       position: absolute;
-      right: rem(8px);
-      margin-top: rem(1px);
+      inset-inline-end: rem(8px);
+      margin-block-start: rem(1px);
       border-radius: 0 $-badge-border-radius $-badge-border-radius 0;
 
       &::after {
