--- a/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_card_highlight.scss
@@ -16,38 +16,38 @@ $-card-highlight-size: rem(12px);
 
 .sage-card-highlight--right,
 .sage-card-highlight--left {
-  top: 0;
-  bottom: 0;
+  inset-block-start: 0;
+  inset-block-end: 0;
   width: $-card-highlight-size;
 }
 
 .sage-card-highlight--right {
-  right: 0;
+  inset-inline-end: 0;
   border-top-right-radius: $-card-highlight-border-radius;
   border-bottom-right-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--left {
-  left: 0;
+  inset-inline-start: 0;
   border-top-left-radius: $-card-highlight-border-radius;
   border-bottom-left-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--top,
 .sage-card-highlight--bottom {
-  right: 0;
-  left: 0;
+  inset-inline-end: 0;
+  inset-inline-start: 0;
   height: $-card-highlight-size;
 }
 
 .sage-card-highlight--top {
-  top: 0;
+  inset-block-start: 0;
   border-top-left-radius: $-card-highlight-border-radius;
   border-top-right-radius: $-card-highlight-border-radius;
 }
 
 .sage-card-highlight--bottom {
-  bottom: 0;
+  inset-block-end: 0;
   border-bottom-left-radius: $-card-highlight-border-radius;
   border-bottom-right-radius: $-card-highlight-border-radius;
 }
