--- a/packages/sage-assets/lib/stylesheets/components/_chart_legend.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_chart_legend.scss
@@ -24,12 +24,12 @@
     display: block;
     width: rem(8px);
     height: rem(8px);
-    margin-right: sage-spacing(xs);
+    margin-inline-end: sage-spacing(xs);
     border-radius: sage-border(radius);
     background-color: var(--item-color);
   }
 
   &:not(:last-child) {
-    margin-right: sage-spacing();
+    margin-inline-end: sage-spacing();
   }
 }
