--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -60,12 +60,12 @@ $-copy-text-color-hover: sage-color(grey, 950);
   flex-flow: row-reverse;
   align-items: center;
   max-width: 100%;
-  padding-right: sage-spacing(2xs);
+  padding-inline-end: sage-spacing(2xs);
 
   &::before {
     @include sage-icon-base(copy, md, pine);
 
-    margin-left: sage-spacing(sm);
+    margin-inline-start: sage-spacing(sm);
     color: $-copy-text-color;
   }
 
