--- a/packages/sage-assets/lib/stylesheets/components/_icon_list.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_icon_list.scss
@@ -6,7 +6,7 @@
 
 
 .sage-icon-list {
-  padding-left: 0;
+  padding-inline-start: 0;
 }
 
 .sage-icon-list-item {
@@ -14,23 +14,23 @@
   list-style: none;
 
   &:not(:last-child) {
-    margin-bottom: sage-spacing();
+    margin-block-end: sage-spacing();
   }
 }
 
 .sage-icon-list-item__bullet {
   min-width: rem(20px);
-  margin-right: sage-spacing(sm);
-  padding-top: rem(3px);
+  margin-inline-end: sage-spacing(sm);
+  padding-block-start: rem(3px);
   text-align: center;
 }
 
 .sage-icon-list-item__bullet--checkbox {
-  padding-top: sage-spacing(2xs);
+  padding-block-start: sage-spacing(2xs);
 }
 
 .sage-icon-list-item__bullet--radio {
-  padding-top: sage-spacing(2xs);
+  padding-block-start: sage-spacing(2xs);
 }
 
 .sage-icon-list-item__body {
@@ -41,13 +41,13 @@
   }
 
   > p:not(:last-child) {
-    margin-bottom: sage-spacing(xs);
+    margin-block-end: sage-spacing(xs);
   }
 }
 
 .sage-icon-list-item__label {
   @extend %t-sage-heading-6;
-  margin-bottom: sage-spacing(2xs);
+  margin-block-end: sage-spacing(2xs);
 }
 
 .sage-icon-list-item__label-subtext {
@@ -57,6 +57,6 @@
 
 .sage-icon-list-item__title {
   @extend %t-sage-heading-6;
-  margin-bottom: sage-spacing(2xs);
+  margin-block-end: sage-spacing(2xs);
 }
 
