--- a/packages/sage-assets/lib/stylesheets/components/_nav.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_nav.scss
@@ -14,7 +14,7 @@ $-nav-subitem-border-width: rem(2px);
 
 .sage-nav__icon {
   display: inline-flex;
-  margin-right: $-nav-icon-spacing;
+  margin-inline-end: $-nav-icon-spacing;
 }
 
 .sage-nav__label {
@@ -41,7 +41,7 @@ $-nav-subitem-border-width: rem(2px);
   display: flex;
   align-items: center;
   padding: rem(4px) rem(12px);
-  margin-bottom: $-nav-icon-spacing;
+  margin-block-end: $-nav-icon-spacing;
   text-decoration: none;
   color: $-nav-color-text;
   border-radius: sage-border(radius-medium);
@@ -73,11 +73,11 @@ $-nav-subitem-border-width: rem(2px);
   display: inline-block;
 
   &:first-child {
-    margin-right: sage-spacing(xs);
+    margin-inline-end: sage-spacing(xs);
   }
 
   &:not(:first-child) {
-    margin-left: sage-spacing(xs);
+    margin-inline-start: sage-spacing(xs);
   }
 }
 
@@ -106,16 +106,16 @@ $-nav-subitem-border-width: rem(2px);
 .sage-nav__list--sub-with-icon,
 .sage-nav__list--sub {
   > li:not(:last-child) {
-    margin-bottom: sage-spacing(2xs);
+    margin-block-end: sage-spacing(2xs);
   }
 }
 
 .sage-nav__list--sub {
-  margin-left: sage-spacing();
+  margin-inline-start: sage-spacing();
 }
 
 .sage-nav__list--sub-with-icon {
-  margin-left: calc((#{sage-spacing(sm)} + (#{$-nav-icon-size} / 2)) - (#{$-nav-subitem-border-width} / 2) - (#{$-nav-icon-spacing} / 2));
-  padding-left: sage-spacing(sm);
-  border-left: $-nav-subitem-border-width solid sage-color(grey, 300);
+  margin-inline-start: calc((#{sage-spacing(sm)} + (#{$-nav-icon-size} / 2)) - (#{$-nav-subitem-border-width} / 2) - (#{$-nav-icon-spacing} / 2));
+  padding-inline-start: sage-spacing(sm);
+  border-inline-start: $-nav-subitem-border-width solid sage-color(grey, 300);
 }
