--- a/packages/sage-assets/lib/stylesheets/components/_overlay.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_overlay.scss
@@ -16,8 +16,8 @@ $-overlay-transition-backdrop-filter: backdrop-filter 0.7s ease-in-out;
   visibility: hidden;
   position: absolute;
   z-index: $-overlay-z-index;
-  top: 0;
-  left: 0;
+  inset-block-start: 0;
+  inset-inline-start: 0;
   height: 0;
   width: 0;
   background-color: $-overlay-bg-color;
