--- a/packages/sage-assets/lib/stylesheets/components/_panel_controls.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_panel_controls.scss
@@ -17,9 +17,9 @@
     content: "";
     display: block;
     height: 0;
-    margin-right: -1 * sage-spacing(panel);
-    margin-left: -1 * sage-spacing(panel);
-    border-top: 1px solid sage-color(grey, 300);
+    margin-inline-end: -1 * sage-spacing(panel);
+    margin-inline-start: -1 * sage-spacing(panel);
+    border-block-start: 1px solid sage-color(grey, 300);
   }
 
   .sage-search {
@@ -59,7 +59,7 @@
   flex: 1;
 
   &:not(:last-child) {
-    margin-right: sage-spacing(panel);
+    margin-inline-end: sage-spacing(panel);
   }
 
   .sage-panel-controls--show-pagination .sage-panel-controls__toolbar &:last-child {
@@ -73,11 +73,11 @@
   flex-grow: 1;
 
   &:not(:last-child) {
-    margin-right: sage-spacing(panel);
+    margin-inline-end: sage-spacing(panel);
   }
 
   .sage-panel-controls--show-pagination .sage-panel-controls__default-controls & {
-    margin-right: 0;
+    margin-inline-end: 0;
   }
 }
 
@@ -87,10 +87,10 @@
   align-items: center;
 
   &:not(:last-child) {
-    margin-right: sage-spacing(panel);
+    margin-inline-end: sage-spacing(panel);
 
     .sage-panel-controls--show-pagination & {
-      margin-right: 0;
+      margin-inline-end: 0;
     }
   }
 
