--- a/packages/sage-assets/lib/stylesheets/components/_property.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_property.scss
@@ -13,12 +13,12 @@
   color: sage-color(grey, 800);
 
   .sage-property-group &:not(:last-child) {
-    margin-right: sage-spacing(md);
+    margin-inline-end: sage-spacing(md);
   }
 }
 
 .sage-property__icon {
-  margin-right: sage-spacing(xs);
+  margin-inline-end: sage-spacing(xs);
 
   &::before {
     vertical-align: top;
