--- a/packages/sage-assets/lib/stylesheets/components/_radio.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_radio.scss
@@ -42,7 +42,7 @@ $-radio-focus-outline-color: currentColor;
   grid-template-columns: min-content 1fr;
 
   .sage-list & {
-    margin-bottom: calc(#{sage-spacing(card)} / 2);
+    margin-block-end: calc(#{sage-spacing(card)} / 2);
   }
 
   @include sage-form-toggle-parents;
@@ -92,7 +92,7 @@ $-radio-focus-outline-color: currentColor;
   @include sage-form-toggle-label;
 
   grid-area: label;
-  margin-left: 0;
+  margin-inline-start: 0;
 
   .sage-radio--has-border & {
     color: sage-color(grey, 900);
@@ -102,8 +102,8 @@ $-radio-focus-outline-color: currentColor;
       content: "" ;
       z-index: sage-z-index(default, 1);
       position: absolute;
-      top: 0;
-      left: 0;
+      inset-block-start: 0;
+      inset-inline-start: 0;
       width: 100%;
       height: 100%;
     }
@@ -131,8 +131,8 @@ $-radio-focus-outline-color: currentColor;
     content: "";
     display: block;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    inset-inline-start: 50%;
+    inset-block-start: 50%;
     transform: translate3d(-50%, -50%, 0);
     color: inherit;
     border-radius: inherit;
@@ -223,7 +223,7 @@ $-radio-focus-outline-color: currentColor;
 
   &:not(.sage-radio--standalone) {
     .sage-radio--has-border & {
-      margin-top: 0;
+      margin-block-start: 0;
 
       &:checked + .sage-radio__label::after {
         box-shadow: sage-border-interactive(selected);
@@ -233,7 +233,7 @@ $-radio-focus-outline-color: currentColor;
   }
 
   .sage-sortable & {
-    margin-top: 0;
+    margin-block-start: 0;
   }
 }
 
