--- a/packages/sage-assets/lib/stylesheets/components/_search.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_search.scss
@@ -21,15 +21,15 @@ $-search-icon: "::before";
     @include sage-icon-base(search-small, sm, pine);
 
     z-index: sage-z-index(default, 2);
-    margin-left: sage-spacing(sm);
-    margin-right: -1 * sage-spacing(lg);
+    margin-inline-start: sage-spacing(sm);
+    margin-inline-end: -1 * sage-spacing(lg);
     color: sage-color(grey, 700);
     transition: map-get($sage-transitions, default);
     transition-property: color;
   }
 
   .sage-search:not(.sage-search--contained) & {
-    border-bottom: 1px solid sage-color(grey, 300);
+    border-block-end: 1px solid sage-color(grey, 300);
 
     &:hover {
       background-color: sage-color(grey, 100);
@@ -80,7 +80,7 @@ $-search-icon: "::before";
   }
 
   .sage-panel-controls__toolbar > &:not(:last-child) {
-    margin-right: sage-spacing(panel);
+    margin-inline-end: sage-spacing(panel);
   }
 
   .sage-panel-controls__toolbar .sage-search--contained & {
@@ -88,8 +88,8 @@ $-search-icon: "::before";
   }
 
   .sage-panel-controls__toolbar .sage-search--contained:first-child:not(:only-child) & {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-start-end-radius: 0;
+    border-end-end-radius: 0;
   }
 
   .sage-toolbar &,
@@ -102,19 +102,19 @@ $-search-icon: "::before";
 
   .sage-toolbar__group .sage-search--contained:first-child & {
     border-radius: sage-border(radius-medium);
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-start-end-radius: 0;
+    border-end-end-radius: 0;
   }
 
   .sage-toolbar__group .sage-search--contained:last-child & {
     border-radius: sage-border(radius-medium);
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    border-start-start-radius: 0;
+    border-end-start-radius: 0;
   }
 
   .sage-dropdown__panel & {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
   }
 }
 
@@ -125,10 +125,10 @@ $-search-icon: "::before";
 .sage-search__label {
   @include sage-form-field-label;
 
-  margin-bottom: sage-spacing(2xs);
+  margin-block-end: sage-spacing(2xs);
 
   .sage-panel-controls__toolbar & {
-    margin-bottom: 0;
+    margin-block-end: 0;
   }
 }
 
@@ -168,16 +168,16 @@ $-search-icon: "::before";
       background-color: sage-color(white);
     }
     &:disabled {
-      padding-left: calc(#{sage-spacing(xl)} - #{sage-spacing(xs)});
-      margin-left: calc(#{sage-spacing(lg)} * -1);
+      padding-inline-start: calc(#{sage-spacing(xl)} - #{sage-spacing(xs)});
+      margin-inline-start: calc(#{sage-spacing(lg)} * -1);
     }
   }
 
   .sage-panel-controls__toolbar &,
   .sage-toolbar__group &,
   .sage-search--contained & {
-    padding-top: sage-spacing(xs);
-    padding-bottom: sage-spacing(xs);
+    padding-block-start: sage-spacing(xs);
+    padding-block-end: sage-spacing(xs);
     border-radius: inherit;
   }
 
@@ -185,8 +185,8 @@ $-search-icon: "::before";
   .sage-toolbar__group &,
   .sage-toolbar &,
   .sage-toolbar__group & {
-    padding-left: calc(#{sage-spacing(xl)} - #{sage-spacing(xs)});
-    margin-left: calc(#{sage-spacing(lg)} * -1);
+    padding-inline-start: calc(#{sage-spacing(xl)} - #{sage-spacing(xs)});
+    margin-inline-start: calc(#{sage-spacing(lg)} * -1);
     box-shadow: map-get($sage-toolbar-button-borders, default);
 
     &:hover {
@@ -248,11 +248,11 @@ $-search-icon: "::before";
 .sage-search__reset-button {
   visibility: hidden;
   position: absolute;
-  right: 0;
+  inset-inline-end: 0;
   z-index: sage-z-index(default, 1);
 
   :not(.sage-search--contained) & {
-    margin-right: sage-spacing(xs);
+    margin-inline-end: sage-spacing(xs);
   }
 
   .sage-search--has-text & {
