--- a/packages/sage-assets/lib/stylesheets/components/_sortable.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_sortable.scss
@@ -10,7 +10,7 @@ $-sortable-image-height: rem(48px);
 
 
 .sage-sortable {
-  padding-left: 0;
+  padding-inline-start: 0;
 }
 
 .sage-sortable__item {
@@ -39,16 +39,16 @@ $-sortable-image-height: rem(48px);
 
   &.sage-sortable__item--card {
     padding: sage-spacing(xs) sage-spacing(card);
-    border-bottom: sage-border();
-    border-left: sage-border();
-    border-right: sage-border();
+    border-block-end: sage-border();
+    border-inline-start: sage-border();
+    border-inline-end: sage-border();
     transition: map-get($sage-transitions, default);
     transition-property: border-color, box-shadow;
 
     &:first-child {
       border-top-left-radius: sage-border(radius);
       border-top-right-radius: sage-border(radius);
-      border-top: sage-border();
+      border-block-start: sage-border();
     }
 
     &:last-child {
@@ -63,7 +63,7 @@ $-sortable-image-height: rem(48px);
     @include target-safari {
       /* stylelint-disable max-nesting-depth */
       .sage-card__row {
-        margin-left: sage-spacing(sm);
+        margin-inline-start: sage-spacing(sm);
       }
       /* stylelint-enable max-nesting-depth */
     }
@@ -91,7 +91,7 @@ $-sortable-image-height: rem(48px);
   img {
     position: absolute;
     transform: translateY(-50%);
-    top: 50%;
+    inset-block-start: 50%;
     width: 100%;
   }
 }
@@ -100,7 +100,7 @@ $-sortable-image-height: rem(48px);
   z-index: sage-z-index();
   overflow: hidden;
   max-width: 100%;
-  margin-right: auto;
+  margin-inline-end: auto;
 }
 
 .sage-sortable__item-title {
