--- a/packages/sage-assets/lib/stylesheets/components/_switch.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_switch.scss
@@ -34,7 +34,7 @@ $-switch-toggle-size: rem(16px);
   color: $-switch-color-default-text;
 
   & + & {
-    margin-top: calc(#{sage-spacing(card)} / -2);
+    margin-block-start: calc(#{sage-spacing(card)} / -2);
   }
 
   &.sage-switch--has-border {
@@ -57,28 +57,28 @@ $-switch-toggle-size: rem(16px);
   }
 
   .sage-list & {
-    margin-top: 0;
-    margin-bottom: calc(#{sage-spacing(card)} / 2);
+    margin-block-start: 0;
+    margin-block-end: calc(#{sage-spacing(card)} / 2);
   }
 
   @include sage-form-toggle-parents {
     + .sage-switch {
-      margin-top: 0;
+      margin-block-start: 0;
     }
   }
 
   .sage-feature-toggle & {
-    margin-bottom: 0;
+    margin-block-end: 0;
   }
 }
 
 .sage-switch__message {
   @include sage-form-toggle-message;
-  margin-left: ($-switch-width + $-switch-label-left-spacing);
+  margin-inline-start: ($-switch-width + $-switch-label-left-spacing);
 
   .sage-switch--toggle-right & {
-    margin-left: 0;
-    padding-left: 0;
+    margin-inline-start: 0;
+    padding-inline-start: 0;
   }
 }
 
@@ -111,20 +111,20 @@ $-switch-toggle-size: rem(16px);
       content: "" ;
       z-index: sage-z-index(default, 1);
       position: absolute;
-      top: 0;
-      left: 0;
+      inset-block-start: 0;
+      inset-inline-start: 0;
       width: 100%;
       height: 100%;
     }
 
     .sage-switch--has-border & {
-      margin-left: ($-switch-width + $-switch-label-left-spacing);
+      margin-inline-start: ($-switch-width + $-switch-label-left-spacing);
       color: sage-color(grey, 900);
       font-weight: sage-font-weight(semibold);
     }
 
     .sage-switch--toggle-right & {
-      margin-left: 0;
+      margin-inline-start: 0;
     }
   }
 
@@ -136,8 +136,8 @@ $-switch-toggle-size: rem(16px);
     content: "";
     display: block;
     position: absolute;
-    left: 50%;
-    top: 50%;
+    inset-inline-start: 50%;
+    inset-block-start: 50%;
   }
 
   &::after {  // switch toggle
