--- a/packages/sage-assets/lib/stylesheets/components/_tag.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tag.scss
@@ -29,7 +29,7 @@ $-tag-button-icon-mobile-size: rem(24px);
 }
 
 .sage-tag--has-image {
-  padding-left: sage-spacing(2xs);
+  padding-inline-start: sage-spacing(2xs);
 }
 
 .sage-tag__image {
@@ -43,13 +43,13 @@ $-tag-button-icon-mobile-size: rem(24px);
   display: inline-flex;
   width: auto;
   height: auto;
-  margin-left: rem(6px);
-  margin-right: calc(#{sage-spacing(2xs)} * -1);
+  margin-inline-start: rem(6px);
+  margin-inline-end: calc(#{sage-spacing(2xs)} * -1);
   color: $-tag-button-color;
 
   &::before {
     position: relative;
-    left: rem(1px);
+    inset-inline-start: rem(1px);
     padding: 0;
     font-size: rem(13px);
   }
