--- a/packages/sage-assets/lib/stylesheets/components/_typeahead.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_typeahead.scss
@@ -15,8 +15,8 @@ $-typeahead-item-height: rem(68px);
 .sage-typeahead__panel {
   z-index: sage-z-index(raised);
   position: absolute;
-  left: 0;
-  right: 0;
+  inset-inline-start: 0;
+  inset-inline-end: 0;
   transform: translateY(#{sage-spacing(2xs)});
   overflow-x: hidden;
   padding: 0;
@@ -42,7 +42,7 @@ $-typeahead-item-height: rem(68px);
   height: $-typeahead-item-height;
 
   &:not(:first-child) {
-    border-top: sage-border();
+    border-block-start: sage-border();
   }
 
   &:hover,
@@ -107,6 +107,6 @@ $-typeahead-item-height: rem(68px);
   }
 
   > * {
-    margin-right: sage-spacing(sm);
+    margin-inline-end: sage-spacing(sm);
   }
 }
